[project]
name = "preorder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.17.0",
    "apscheduler>=3.11.2",
    "fastapi[standard]>=0.115.6",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "honcho>=2.0.0",
]
